[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/default.theme" type="Theme" id=1]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 137.0
text = "Lobby
"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 141.0
margin_right = 1024.0
margin_bottom = 469.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 191.0
margin_right = 833.0
margin_bottom = 328.0
custom_constants/vseparation = 8
custom_constants/hseparation = 12
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 236.0
margin_bottom = 72.0
text = "Name"
align = 2

[node name="NameTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 248.0
margin_right = 642.0
margin_bottom = 77.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 90.0
margin_right = 236.0
margin_bottom = 157.0
text = "IP"
align = 2

[node name="IPTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 248.0
margin_top = 85.0
margin_right = 642.0
margin_bottom = 162.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 175.0
margin_right = 236.0
margin_bottom = 242.0
text = "Port"
align = 2

[node name="PortTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 248.0
margin_top = 170.0
margin_right = 642.0
margin_bottom = 247.0
rect_min_size = Vector2( 320, 0 )
text = "32501"
align = 1

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 255.0
margin_right = 236.0
margin_bottom = 328.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 248.0
margin_top = 255.0
margin_right = 642.0
margin_bottom = 328.0
text = "Join"

[node name="WaitingRoom" parent="." groups=["WaitingRoom"] instance=ExtResource( 2 )]

[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameTextBox" to="." method="_on_NameTextBox_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
